# ecosystem

./: .coveragerc  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
documentation/: command_line_tool.md  comparison_to_zeromq.md  distributed_tracking.md  documentation_root.md  ecosystem_on_posix.md  ecosystem_on_windows.md  example_base.md  example_dice_roller.md  example_echo.md  example_echo_better_client.md  example_echo_client.md  example_echo_server.md  examples.md  middleware.md  observability.md  requirements.md  setup_tasks.md  statistics_keeper.md  the_protocol.md  todo.md  transient_vs_persistant_connections.md  why.md
ecosystem/: README.md  __init__.py  application_base.py  configuration.py  setup.py
ekocpp/: .gitignore  CMakeLists.txt
ekocpp/documentation/: ambient_span_context.md  application_base.md  function_traits.md  logging.md
ekocpp/examples/observable_fun/: CMakeLists.txt  start_observable_fun_cpp.sh
ekocpp/examples/observable_fun/fortunes/: main.cpp
ekocpp/examples/observable_fun/joker/: main.cpp
ekocpp/examples/observable_fun/lottery/: main.cpp
ekocpp/examples/observable_fun/magic_eight_ball/: main.cpp
ekocpp/examples/observable_fun/router/: main.cpp
ekocpp/examples/observable_fun/shared/: fortunes_dto.hpp  joker_dto.hpp  lottery_dto.hpp  magic_eight_ball_dto.hpp  router_dto.hpp  time_reporter_dto.hpp  tracker_dto.hpp
ekocpp/examples/observable_fun/time_reporter/: main.cpp
ekocpp/examples/observable_fun/tracker/: main.cpp
ekocpp/otlp_metrics/: CMakeLists.txt
ekocpp/otlp_metrics/src/: main.cpp  metrics_scraper.cpp  metrics_scraper.hpp  otlp_metrics_exporter.cpp  otlp_metrics_exporter.hpp  service_discovery.cpp  service_discovery.hpp  stats_translator.cpp  stats_translator.hpp
ekocpp/otlp_traces/: CMakeLists.txt
ekocpp/otlp_traces/src/: initiate_otlp_tracing.cpp  initiate_otlp_tracing.hpp  otlp_buffered_tracing_middleware.cpp  otlp_buffered_tracing_middleware.hpp  otlp_span_exporter.cpp  otlp_span_exporter.hpp  otlp_span_record.hpp  otlp_tracing_middleware.cpp  otlp_tracing_middleware.hpp
ekocpp/src/: application_base.cpp  application_base.hpp  binary_frame.cpp  connection_handler.cpp  connection_handler.hpp  function_traits.hpp  main.cpp  request_context.hpp  request_dto.hpp  request_router.hpp  span_key.hpp
ekocpp/src/cacheing/: lru_cache.hpp
ekocpp/src/clients/: client_base.cpp  client_base.hpp  persisted_tcp_client.cpp  persisted_tcp_client.hpp  persisted_uds_client.cpp  persisted_uds_client.hpp  persistent_stream_client_base.cpp  persistent_stream_client_base.hpp  stream_client_base.cpp  stream_client_base.hpp  transient_tcp_client.cpp  transient_tcp_client.hpp  transient_uds_client.cpp  transient_uds_client.hpp  udp_client.cpp  udp_client.hpp
ekocpp/src/configuration/: argument_parser.cpp  argument_parser.hpp  config_models.cpp  config_models.hpp
ekocpp/src/coroutines/: ambient_span_context.cpp  ambient_span_context.hpp
ekocpp/src/data_transfer_objects/: binary_frame.cpp  binary_frame.hpp  empty_dto.hpp  json_dto.hpp  otlp_log_record.hpp  request_dto.hpp  response_dto.hpp  span_key.cpp  span_key.hpp
ekocpp/src/exceptions/: exceptions.hpp
ekocpp/src/logs/: eco_logger.cpp  eco_logger.hpp  ekosis_rotating_file_sink.hpp  otlp_formatter.cpp  otlp_formatter.hpp
ekocpp/src/middleware/: buffered_middleware_base.hpp  buffered_middleware_manager.hpp  middleware_base.hpp  middleware_manager.hpp
ekocpp/src/queues/: paginated_queue.hpp  pending_queue.hpp  queue_page.hpp
ekocpp/src/requests/: buffered_handler_interface.hpp  buffered_request_handler.hpp  function_traits.hpp  request_context.hpp  request_router.hpp  status.hpp
ekocpp/src/sending/: buffered_sender.hpp
ekocpp/src/servers/: server_base.cpp  server_base.hpp  stream_server_base.cpp  stream_server_base.hpp  tcp_server.cpp  tcp_server.hpp  udp_server.cpp  udp_server.hpp  uds_server.cpp  uds_server.hpp
ekocpp/src/standard_endpoints/: buffered_handler_manager.cpp  buffered_handler_manager.hpp  buffered_sender_manager.cpp  buffered_sender_manager.hpp  errors.cpp  errors.hpp  log_manager.cpp  log_manager.hpp  statistics.cpp  statistics.hpp
ekocpp/src/state_keepers/: error_state_keeper.hpp  error_state_list.cpp  error_state_list.hpp  statistics_keeper.cpp  statistics_keeper.hpp
ekocpp/src/util/: fire_and_forget.hpp
ekocpp/tests/: application_base_buffered_endpoint_live_test.cpp  buffered_request_handler_smoke_test.cpp  buffered_sender_smoke_test.cpp  fire_and_forget_smoke_test.cpp  json_dto_smoke_test.cpp  lru_cache_smoke_test.cpp  middleware_smoke_test.cpp  queue_smoke_test.cpp  request_router_exception_smoke_test.cpp  standard_endpoints_buffered_management_live_test.cpp  standard_endpoints_phase1to3_live_test.cpp  statistics_keeper_smoke_test.cpp
ekosis/: README.md  application_base.py
ekosis_jaeger_http/: pyproject.toml
ekosis_jaeger_http/documentation/: README.md
ekosis_jaeger_http/ekosis_jaeger_http/: __init__.py  buffered_middleware.py  middleware.py  setup.py
ekosis_log_shipper/: CMakeLists.txt  README.md
ekosis_log_shipper/src/: http_sender.cpp  http_sender.hpp  main.cpp  otlp_envelope.cpp  otlp_envelope.hpp  state_store.cpp  state_store.hpp  tracked_file.cpp  tracked_file.hpp
ekosis_log_shipper/tests/: CMakeLists.txt  manual_rotation_check.cpp
ekosis_net_cat/: CMakeLists.txt  README.md
ekosis_net_cat/src/: binary_frame.hpp  main.cpp  span_key.cpp  tcp_client.cpp  tcp_client.hpp  udp_client.cpp  udp_client.hpp  uds_client.cpp  uds_client.hpp
ekosis_net_cat/tests/: CMakeLists.txt  manual_frame_roundtrip.cpp
ekosis_otlp_traces/: pyproject.toml
ekosis_otlp_traces/documentation/: README.md
ekosis_otlp_traces/ekosis_otlp_traces/: __init__.py  buffered_middleware.py  middleware.py  setup.py
ekosis_prometheus/: pyproject.toml
ekosis_prometheus/documentation/: README.md
ekosis_prometheus/ekosis_prometheus/: application.py  scraper.py  service_discovery.py  stats_translator.py
tests/: README.md  basic_tests.py  binary_protocol_tests.py  buffered_handler_endpoints.py  buffered_middleware_unit_tests.py  (+13 more)
(+360 files in other folders)
