[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name             = "ekosis"
version          = "0.17.0"
description      = "A Python framework for creating message-based, distributed systems. Allowing for TCP, UDP and UDS communications. Using JSON as the communications protocol."
readme           = "README.md"
license          = "BSD-3-Clause"
authors          = [{name = "Dirk Botha", email = "bothadj@gmail.com"}]
requires-python  = ">=3.11.3"
dependencies     = [
    "sqlalchemy>=2.0.31",
    "pydantic>=2.8.2",
    "msgpack>=1.0.8",
]
classifiers      = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/TheLastCylon/ecosystem"

[tool.setuptools.packages.find]
include = ["ekosis", "ekosis.*"]
